*******************************************************************************
Version 1.6.15
*******************************************************************************

2012-01-04 Fabrice Fontaine <fabrice.fontaine(at)orange.com>

	Bug fix for IPv4-mapped IPv6 addresses.

	Setting IPv6 sockets with IPV6_V6ONLY flag to avoid getting IP packets
	with IPv4-mapped IPv6 addresses on IPv6 sockets.

2012-01-09 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	SF Bug tracker, ID: 3469344
	Submitted: dimmman ( dimmman ) - 2012-01-04 01:44:29 PST
	Details: Looking at the code (v1.6.14, upnptools.c) for UpnpResolveURL
	and UpnpResolveURL2 it shows that the ExitFunction: always returns
	UPNP_E_SUCCESS.

	I'm farily sure it's a simple mistake that should have been "return ret;"
	in both cases.

	Br,
	Jonny

*******************************************************************************
Version 1.6.14
*******************************************************************************

2011-10-31 Fabrice Fontaine <fabrice.fontaine(at)orange.com>

	UPnP Low Power Support.

	Adding two new functions (UpnpSendAdvertisementLowPower and
	UpnpUnRegisterRootDeviceLowPower) which can be used to specify values
	for the three SSDP headers defined by UPnP Low Power. Those headers are
	Powerstate, SleepPeriod and RegistrationState.

2011-10-24 Fabrice Fontaine <fabrice.fontaine(at)orange.com>

	Bug fix in IN6_IS_ADDR_GLOBAL.

	Changing IN6_IS_ADDR_GLOBAL to accept all IPv6 addresses which have a
	2000::/3 prefix.

2011-07-20 Marc Essayan <marc.essayan(at)orange-ftgroup.com>

	Bug Fix on M-SEARCH.

	Do not answer to M-SEARCH using HTTP version 1.0 as specified by the
	UPnP Device Architecture.

2011-03-18 Iain Denniston <iain.denniston(at)gmail.com>

	Fixes for compilation under Windows (specifically MSVC). Also added
	MSVC supported "_inline", and fixed some WIN32 specific warnings.

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>
