@@ -5,7 +5,7 @@
  *
  * Copyright (c) 2000-2003 Intel Corporation 
  * All rights reserved. 
- * Copyright (C) 2011 France Telecom All rights reserved. 
+ * Copyright (C) 2011-2012 France Telecom All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without 
  * modification, are permitted provided that the following conditions are met: 
@@ -756,7 +756,7 @@ struct Upnp_Discovery
 	char Ext[LINE_SIZE];           
 				     
 	/** The host address of the device responding to the search. */
-	struct sockaddr_in DestAddr; 
+	struct sockaddr_storage DestAddr;
 };
 
 /** Returned along with a {\bf UPNP_EVENT_SUBSCRIBE_COMPLETE} or {\bf
